# qt_hello_button_qt5

./: CMakeLists.txt  MainWindow.cpp  MainWindow.h  MainWindow.ui
.github/workflows/: build.yml
